changed placeholder values for new car form

--- a/app/views/cars/_form.html.erb
+++ b/app/views/cars/_form.html.erb
@@ -4,8 +4,8 @@
     <%= f.input :model, placeholder: 'Corsa', input_html: {class: 'form_placeholder box-half'} %>
   </div>
   <div class="d-flex justify-content-around box-half">
-    <%= f.input :house_num, label: "House No", placeholder: 'Vauxhall', input_html: {class: 'form_placeholder'} %>
-    <%= f.input :street, placeholder: 'Corsa', input_html: {class: 'form_placeholder'} %>
+    <%= f.input :house_num, label: "House No", placeholder: '08', input_html: {class: 'form_placeholder'} %>
+    <%= f.input :street, placeholder: 'Harford Street', input_html: {class: 'form_placeholder'} %>
   </div>
   <div class="d-flex justify-content-around box-half">
     <%= f.input :postal_code, placeholder: 'PostCode / Zip Code', input_html: {class: 'form_placeholder'} %>
