--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class="banner d-flex justify-content-around" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1620812736363-65d1786b039c?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2734&q=80);">
-  <div class="container text-center">
+  <div class="container text-center align-self-center">
     
     <h1 class="animate__animated animate__backInLeft">Caravan - Rent the <strong>car</strong> of your dreams</h1>
     <br>
@@ -15,32 +15,6 @@
     <br>
     <%= link_to 'Browse all cars', cars_path, class: 'btn btn-box' %>
     <%= link_to 'List a car for rent', new_car_path, class: 'btn btn-box' %>
-    <h5 class="animate__animated animate__backInLeft mt-4">Our latest cars:</h5>
-    <div class="d-flex mt-4">
-      <% @cars = Car.first(3) %>
-      <% @cars.each do |car| %>
-      <div class="home-card m-auto border-0">
-        <%= cl_image_tag car.photos[0].key, class: "card-img-top rounded-top", style: "height:120px;", alt: "alttext" %>
-        <div class="d-flex justify-content-around">
-          <p><%= car.seats %> <i class="fas fa-chair"></i></p>
-          <p><%= car.location %></p>
-        </div>
-        <h5><%= "#{car.make} - #{car.model}" %></h5>
-        <div class="p-0">
-          <p class="m-0">£<%= car.price %> per day</p>
-          <div class="row justify-content-center">
-            <div class="rating mb-2">
-              <input type="radio" name="rating" value="5" id="5">
-              <label for="5">☆</label>
-              <input type="radio" name="rating" value="4" id="4"><label for="4">☆</label> <input type="radio" name="rating" value="3" id="3"><label for="3">☆</label> <input type="radio" name="rating" value="2" id="2"><label for="2">☆</label> <input type="radio" name="rating" value="1" id="1"><label for="1">☆</label>
-            </div>
-          </div>
-          <a href="/cars/<%=car.id%>" class="btn btn-box mb-3">More Details</a>
-          <a href="/cars/<%=car.id%>/bookings/new" class="btn btn-box mb-3">Book Now</a>
-        </div>
-      </div>
-      <% end %>
-    </div>
   </div>
   <div class="container w-25 details">
     <h3 class="pl-5 animate__animated animate__backInLeft mt-4">How it Works:</h3>
