--- a/app/assets/stylesheets/components/_box.scss
+++ b/app/assets/stylesheets/components/_box.scss
@@ -104,10 +104,31 @@
   text-align: center;
   border: 2px solid #66fcf1;
   padding: 10px 10px;
+  color: #c5c6c7;
   width: 20vw;
   outline: none;
   border-radius: 24px;
   transition: 0.25s;
+}
+
+textarea.form-control {
+  background: #2A2631;
+  margin: 10px;
+  text-align: center;
+  border: 2px solid #66fcf1;
+  padding: 10px 10px;
+  color: #c5c6c7;
+  width: 40vw;
+  outline: none;
+  border-radius: 24px;
+  transition: 0.25s;
+}
+
+textarea.form-control:focus{
+  color: #c5c6c7;
+  background: #2A2631 !important;
+  border-color: orange;
+  width: 45vw;
 }
 
 .box-half input[type = "text"]:focus, .box-half input[type = "number"]:focus {
