--- a/app/views/bookings/my_bookings.html.erb
+++ b/app/views/bookings/my_bookings.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1>Hi <%= current_user.first_name %>, here are your bookings:</h1>
+  <h1 class="text-center">Hi <%= current_user.first_name %>, here are your bookings:</h1>
   <ul class="list-group">
     <% @bookings.each do |booking| %>
       <% last_updated = booking.updated_at.strftime("%Y-%m-%d %H:%M:%S") %>
