--- a/app/views/cars/my_cars.html.erb
+++ b/app/views/cars/my_cars.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1>Hi <%= current_user.first_name %>, here are your cars:</h1>
+  <h1 class="text-center">Hi <%= current_user.first_name %>, here are your cars:</h1>
   <ul class="list-group">
     <% @cars.each do |car| %>
       <% last_updated = car.updated_at.strftime("%Y-%m-%d %H:%M:%S") %>
