--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -3,7 +3,9 @@
   align-items: center;
   justify-content: space-between;
   height: 20px;
-  padding: 0px 10px;
+  margin-bottom: 30px;
+  margin-top: 30px;
+  padding: 20px;
   color: #66fcf1;
 }
 
