--- a/app/views/cars/show.html.erb
+++ b/app/views/cars/show.html.erb
@@ -8,7 +8,7 @@
             <div class="carousel-inner">
               <% @car.photos.each do |photo| %>
                 <div class="carousel-item">
-                  <%= cl_image_tag photo.key, height: 300, width: 400, crop: :fill, class: 'd-block' %>
+                  <%= cl_image_tag photo.key, height: 300, width: 400, crop: :fill, class: 'd-block w-100' %>
                 </div>
               <% end %>
               <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
