--- a/app/views/bookings/my_bookings.html.erb
+++ b/app/views/bookings/my_bookings.html.erb
@@ -7,7 +7,11 @@
         <!-- <div class="card"> -->
         <div class="row">
           <div class="col-sm-5">
+          <% if Car.find(booking.car_id).photos.empty?%>
+            <%= image_tag "CarPlaceholder.jpg", class: "car-show-image shadow", alt: "Car Placeholder Image"%>
+          <% else %>
             <%= cl_image_tag Car.find(booking.car_id).photos[0].key, class: "card-img-top rounded-top", style: "height:175px;", alt: "alttext" %>
+          <% end %>
           </div>
           <div class="col-sm-7">
             <div class="card-body">
