--- a/app/views/cars/index.html.erb
+++ b/app/views/cars/index.html.erb
@@ -1,5 +1,6 @@
 <div class="cover mb-4 d-flex align-items-center justify-content-center">
   <div class="text-center text-gray">
+    <script>console.log("Car Count:<%= @cars.count %>")</script>
     <% if params[:query].present? %>
       <h1>There are <%=@cars.count%> cars matching your filters:</h1>
     <% else %>
@@ -23,7 +24,9 @@
     <% @cars.each do |car| %>
       <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 col-xl-3 col-xxl-1 mt-5 text-center">
         <div class="our-card card m-auto border-0">
-        <% if car.photos.empty?%>
+        <% if !car.car_url.nil?%>
+          <%= image_tag "#{car.car_url}", class: "card-img-top rounded-top", style:"height:175px;", alt: "Car image"%>
+        <% elsif car.photos.empty?%>
           <%= image_tag "CarPlaceholder.jpg", class: "card-img-top rounded-top", style: "height:175px;", alt: "Car Placeholder Image"%>
         <% else %>
           <%= cl_image_tag car.photos[0].key, class: "card-img-top rounded-top", style: "height:175px;", alt: "Car Image" %>
