--- a/app/views/cars/show.html.erb
+++ b/app/views/cars/show.html.erb
@@ -2,7 +2,14 @@
   <div class="row justify-content-center">
     <div class="col-xs-1 col-6 m-auto text-center">
       <div class="row justify-content-center">
-        <% if @car.photos.count > 1 # only add carousel if !+ custom images have been uploaded%>
+      <script>console.log("Car ID:<%= @car.id %>")</script>
+      <script>console.log("Car User ID:<%= @car.user_id %>")</script>
+      <script>console.log("Car URL:<%= @car.car_url %>")</script>
+      <script>console.log("Car Photos:<%= @car.photos.count %>")</script>
+      <script>console.log("Car Map Marker:<%= @marker %>")</script>
+        <% if !@car.car_url.nil?%>
+          <%= image_tag "#{@car.car_url}", class: "car-show-image shadow", style: "height:304px;", alt: "Car Placeholder Image"%>
+        <% elsif @car.photos.count > 1 # only add carousel if !+ custom images have been uploaded%>
           <!-- Bootstrap Carousel -->
           <div id="carouselExampleControls" class="carousel slide mx-auto" data-ride="carousel" style="max-width:400px">
             <div class="carousel-inner">
